--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "get-stream": "^3.0.0",
     "husky": "^0.14.3",
     "jest": "^22.4.3",
-    "lint-staged": "^7.0.4"
+    "lint-staged": "^7.0.4",
+    "sinon": "^5.0.7"
   },
   "dependencies": {}
 }
