--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "lint-staged": "^7.0.4",
     "sinon": "^5.0.7"
   },
-  "dependencies": {}
+  "dependencies": {
+    "node-fetch": "^2.1.2",
+    "request": "^2.87.0"
+  }
 }
