--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sinon": "^5.0.7"
   },
   "dependencies": {
-    "node-fetch": "^2.1.2"
+    "node-fetch": "^2.1.2",
+    "os": "^0.1.1"
   }
 }
