--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "get-stream": "^3.0.0",
     "husky": "^0.14.3",
     "jest": "^22.4.3",
-    "lint-staged": "^7.0.4",
+    "lint-staged": "^7.0.5",
     "sinon": "^5.0.7"
   },
-  "dependencies": {}
+  "dependencies": {
+    "node-fetch": "^2.1.2"
+  }
 }
