--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "pesto-react-boilerplate": "pestoScripts/pesto-react-boilerplate.sh"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
